# cc-py-sdk

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile.dev  Dockerfile.dev.2  Dockerfile.dev.old  HISTORY.rst  LICENSE  MANIFEST  Makefile  README.md  README.rst  cookiecutter.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  tests.rst  usage.rst
src/cc/: __init__.py  action_runner.py  datastore.py  datastore_s3.py  event_store.py  event_store_tiledb.py  filesapi.py  logger.py  plugin_manager.py  template_substitution.py
src/cc_py_sdk/: __init__.py  datastore.py  datastore_s3.py  filesapi.py  plugin_manager.py
tests/: __init__.py  print_payload.py  sample_payload  test_plugin_manager.py  test_tiledb_event_store.py
