[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_py_sdk"
version = "0.1.0"
description = "The sdk"
readme = "README.rst"
authors = [
  {name = "Randal Goss", email = "randal.s.goss@usace.army.mil"}
]
maintainers = [
  {name = "Randal Goss", email = "randal.s.goss@usace.army.mil"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/rgoss/cc_py_sdk/issues"
changelog = "https://github.com/rgoss/cc_py_sdk/blob/master/changelog.md"
homepage = "https://github.com/rgoss/cc_py_sdk"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

