[build-system]
requires = ["setuptools", "setuptools-scm[simple]"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_py_sdk"
dynamic = ["version"]
description = "The python sdk for USACE Cloud Compute"
readme = "README.md"
requires-python = ">= 3.8"
license-files = ["LICENSE"]
dependencies = [
  "boto3",
  "dataclasses-json",
  "numpy",
  "tiledb",
  "typing-inspect",
  "typing_extensions"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]